# c-training

./: .gitignore  LICENSE  README.md
daemonize/: CMakeLists.txt  main.c
logger/: CMakeLists.txt  logger.c  logger.h  main.c
scripts/: CMakeLists.txt  README.md  build.sh  create_project.sh  main.c
socket_client/: CMakeLists.txt  README.md  main.c
socket_echo_client/: CMakeLists.txt  README.md  main.c
socket_epoll/: CMakeLists.txt  README.md  main.c
socket_poll/: CMakeLists.txt  README.md  main.c
socket_select/: CMakeLists.txt  README.md  main.c
socket_server/: CMakeLists.txt  README.md  main.c
thread/: CMakeLists.txt  README.md  main.c
thread/mutex/: CMakeLists.txt
thread_cond/: CMakeLists.txt  README.md
thread_mutex/: CMakeLists.txt  README.md  main.c
